feat: 合并 TerraGuns 模块并迁移至 PortLib API
主要变更：
- 将 TerraGuns 模块合并到 ConfluenceOtherworld，删除独立子模块
- 重构枪械系统：BaseGun.Builder 模式，合并 GunItems/ModEntities/TGDamageTypes 等
- 将网络包中的 ByteBufCodecs/StreamCodec/FriendlyByteBuf 替换为 PortLib 版本
- 将部分事件从 @SubscribeEvent 转换为 PortEventHandler 模式
- 修复双向网络包的 handle() 分派逻辑
- PortLib 新增 fromCodecWithRegistriesTrusted 方法
- 更新 PortComponentSerialization 使用 trusted 版本